# Prime-Numbers-

./: main.py  pyproject.toml
