[tool.poetry]
name = "range-prime-number-finder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pg = "^0.1"
poetry = "^1.1.4"
pandas = "^1.2.0"
primesieve = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
